cmake_minimum_required(VERSION 3.31)
project(week9_lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(week9_lab2 main.cpp
        problem1.cpp
        problem2.cpp
        problem4.cpp
        problem5.cpp
        problem6.cpp
        problem7.cpp
        problem3.cpp
        problem8.cpp
        problem9.cpp
        problem11.cpp)
